[tool.poetry]
name = "youtube-download"
version = "0.1.0"
description = ""
authors = ["Alen Vlahovljak <alen.vlahovljak@evolt.dev>"]
readme = "README.md"
packages = [{include = "youtube_download"}]

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^12.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
